--- a/src/content/ideas/2025/gpu-p6/index.mdx
+++ b/src/content/ideas/2025/gpu-p6/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'FlashAttention & LLM Inference on GPUs'
-description: 'Writing a FlashAttention CUDA kernel from scratch — tiling the attention matrix to avoid materializing N×N memory, building a KV cache for token generation, and running GPT-2 with custom kernels end-to-end.'
+description: 'Writing a FlashAttention CUDA kernel from scratch, tiling the attention matrix to avoid materializing N×N memory, building a KV cache for token generation, and running GPT-2 with custom kernels end-to-end.'
 date: '2026-02-25'
 updated: '2026-02-25'
 status: 'complete'
@@ -12,7 +12,7 @@ audience: 'Technical'
 media_subpath: "/ideas/gpu-pextra/"
 parent: '2025/gpu-retro'
 image:
-  path: "./hero-collage-2.png"
+  path: "./hero-seedream-4-5.jpg"
   alt: 'FlashAttention & LLM Inference on GPUs'
 hideCaption: true
 ---
@@ -29,35 +29,35 @@ import managingGlobalMemImg from "./m3l3_managing_global_mem.png";
 
 ## Introduction: The Attention Bottleneck
 
-Large language models are, at their core, matrix multiplication machines. Billions of parameters, thousands of layers, but the operation that dominates the compute budget — especially at long context lengths — is **self-attention**.
+Large language models spend most of their compute time in matrix multiplies and attention kernels. Billions of parameters, thousands of layers, but the operation that dominates the compute budget, especially at long context lengths, is **self-attention**.
 
-The naive implementation of self-attention has a problem that's easy to miss until you actually profile it: it materializes a **sequence-length × sequence-length matrix** in GPU global memory. For a 4096-token context, that's a 4096×4096 matrix of fp16 values — 32 MB, just for intermediate attention scores, just for one layer, just for one batch element. At 64 layers and batch sizes of 64, you're looking at tens of gigabytes of intermediate storage, and the GPU's bandwidth has to move all of it every forward pass. The arithmetic units sit idle waiting for data. You're deep in memory-bound territory on the Roofline model.
+The naive implementation of self-attention has a problem that's easy to miss until you actually profile it: it materializes a **sequence-length × sequence-length matrix** in GPU global memory. For a 4096-token context, that's a 4096×4096 matrix of fp16 values, or 32 MB, just for intermediate attention scores, just for one layer, just for one batch element. At 64 layers and batch sizes of 64, you're looking at tens of gigabytes of intermediate storage, and the GPU's bandwidth has to move all of it every forward pass. The arithmetic units sit idle waiting for data. You're deep in memory-bound territory on the Roofline model.
 
-**FlashAttention** (Dao et al., 2022) solves this with an observation that sounds deceptively simple: you can compute exact attention without ever materializing the full N×N score matrix in global memory. You tile the computation and use an "online softmax" algorithm to accumulate the correct result incrementally. The result is an O(N) memory algorithm for an operation that seemed to require O(N²) memory.
+**FlashAttention** (Dao et al., 2022) solves this with an observation that sounds deceptively simple: you can compute exact attention without ever materializing the full N×N score matrix in global memory. You tile the computation and use an "online softmax" algorithm to accumulate the correct result incrementally. The result is O(N) additional memory in sequence length when head dimension is treated as constant (equivalently O(N·d) if d is explicit), for an operation that seemed to require O(N²) memory.
 
-The capstone project of Georgia Tech's [CS 8803: GPU Hardware and Software](https://omscs.gatech.edu/cs-8803-o11-gpu-hardware-and-software) asks you to implement this from scratch — a numerically-stable softmax kernel, tiled GEMM kernels, the FlashAttention forward pass in CUDA, a KV cache for autoregressive decoding, and finally an end-to-end inference pipeline running GPT-2 with your custom attention kernels.
+The capstone project of Georgia Tech's [CS 8803: GPU Hardware and Software](https://omscs.gatech.edu/cs-8803-o11-gpu-hardware-and-software) asks you to implement this from scratch: a numerically-stable softmax kernel, tiled GEMM kernels, the FlashAttention forward pass in CUDA, a KV cache for autoregressive decoding, and finally an end-to-end inference pipeline running GPT-2 with your custom attention kernels.
 
-It ties together everything from the course: CUDA kernel writing and profiling (Projects 1–2), understanding of latency and throughput tradeoffs (Projects 3–4), and the GPU's relationship to the ML software stack (Module 12). It's the most ambitious project in the course, and it's the most satisfying one to complete.
+It ties together everything from the course: CUDA kernel writing and profiling (Projects 1–2), understanding of latency and throughput tradeoffs (Projects 3–4), and the GPU's relationship to the ML software stack (Module 12). It's the most ambitious project in the course.
 
 > [!note]
-> This post focuses on the concepts behind the project. For a broader course overview, see: [GPU Hardware and Software: A Retrospective](/ideas/2026/gpu-retro/).
+> I keep this write-up focused on the implementation ideas behind the capstone project. For the broader course overview, see: [GPU Hardware and Software: A Retrospective](/ideas/2025/gpu-retro/).
 
 ## Self-Attention from Scratch
 
 ### The Scaled Dot-Product Formula
 
-The core attention operation takes three matrices — **Query (Q)**, **Key (K)**, and **Value (V)** — and produces an output:
+The core attention operation takes three matrices, **Query (Q)**, **Key (K)**, and **Value (V)**, and produces an output:
 
 $$\text{Attention}(Q, K, V) = \text{softmax}\left(\frac{QK^T}{\sqrt{d}}\right)V$$
 
 Conceptually: each query "attends to" all keys by computing dot products, which are then softmax-normalized into attention weights, which are used to compute a weighted sum of the values.
 
-In a language model, Q, K, and V are all derived from the same input sequence by multiplying with learned weight matrices ($W_Q$, $W_K$, $W_V$). This is **self-attention** — the sequence attending to itself, each position weighting all other positions.
+In a language model, Q, K, and V are all derived from the same input sequence by multiplying with learned weight matrices ($W_Q$, $W_K$, $W_V$). This is **self-attention**, where the sequence attends to itself and each position weights all other positions.
 
 <Figure
   src={gemmImg}
   alt="GEMM operation behind attention"
-  caption="The QK^T computation is a GEMM: A=[batch, seq, d_head] times B^T=[batch, d_head, seq] produces S=[batch, seq, seq]. For seq=4096, this is a 4096×4096 matrix per head per batch element — the memory bottleneck."
+  caption="The QK^T computation is a GEMM: A=[batch, seq, d_head] times B^T=[batch, d_head, seq] produces S=[batch, seq, seq]. For seq=4096, this is a 4096×4096 matrix per head per batch element, which is the memory bottleneck."
   width={640}
 />
 
@@ -68,7 +68,7 @@ The scaling by $1/\sqrt{d}$ prevents the dot products from growing too large (wh
 In practice, models use **Multi-Head Attention (MHA)**: instead of one set of Q/K/V projections, you have *h* heads, each with its own projections into a smaller subspace ($d_{\text{head}} = d_{\text{model}} / h$).
 
 ```python
-# Conceptual multi-head attention — illustrates the pattern, not the project code
+# Conceptual multi-head attention, illustrates the pattern, not the project code
 def multihead_attention(Q, K, V, num_heads):
     B, N, D = Q.shape
     head_dim = D // num_heads
@@ -87,11 +87,11 @@ def multihead_attention(Q, K, V, num_heads):
     return output.transpose(1, 2).contiguous().view(B, N, D)
 ```
 
-The key point about MHA on a GPU: all heads can be computed as a single batched matrix multiplication. The head dimension just becomes an extra batch dimension. No sequential loop over heads required.
+In practice, MHA maps cleanly to GPU batching: all heads can be computed as a single batched matrix multiplication. The head dimension becomes an extra batch dimension, so no sequential loop over heads is required.
 
 ### Causal Masking
 
-For autoregressive text generation, a token at position *i* should only be able to attend to tokens at positions ≤ *i* — it can't look at future tokens that haven't been generated yet. This is enforced by a **causal mask**: before the softmax, set the upper-triangular portion of the score matrix to $-\infty$. After softmax, those positions become 0 (zero weight). Tokens at future positions are effectively ignored.
+For autoregressive text generation, a token at position *i* should only be able to attend to tokens at positions ≤ *i*, so it can't look at future tokens that haven't been generated yet. This is enforced by a **causal mask**: before the softmax, set the upper-triangular portion of the score matrix to $-\infty$. After softmax, those positions become 0 (zero weight). Tokens at future positions are effectively ignored.
 
 ```python
 # Apply causal mask
@@ -111,18 +111,18 @@ The naive softmax formula is:
 
 $$\text{softmax}(x_i) = \frac{e^{x_i}}{\sum_j e^{x_j}}$$
 
-The problem: for large input values, $e^{x_i}$ overflows float32 (max representable ~3.4×10³⁸). Attention scores can easily reach 100+ for long sequences with large embeddings. A score of 90 gives $e^{90} \approx 10^{39}$ — overflow.
+The problem: for large input values, $e^{x_i}$ overflows float32 (max representable ~3.4×10³⁸). Attention scores can easily reach 100+ for long sequences with large embeddings. A score of 90 gives $e^{90} \approx 10^{39}$, which overflows.
 
 The standard fix is to subtract the row maximum before exponentiating:
 
 $$\text{softmax}(x_i) = \frac{e^{x_i - x_{\max}}}{\sum_j e^{x_j - x_{\max}}}$$
 
-This is mathematically identical (the $e^{-x_{\max}}$ terms cancel) but numerically stable — the largest exponentiated value is $e^0 = 1$.
+This is mathematically identical (the $e^{-x_{\max}}$ terms cancel) but numerically stable, because the largest exponentiated value is $e^0 = 1$.
 
-In CUDA, computing the row maximum requires a **parallel reduction** within a thread block. The pattern is log₂(N) passes: in each pass, half the threads compare pairs of values and write the winner into shared memory, then sync. After log₂(N) passes, thread 0 holds the block maximum.
+In CUDA, computing the row maximum requires a **parallel reduction** within a thread block. It runs in log₂(N) passes: in each pass, half the threads compare pairs of values and write the winner into shared memory, then sync. After log₂(N) passes, thread 0 holds the block maximum.
 
 ```cpp
-// Conceptual parallel reduction for row maximum — illustrates the pattern
+// Conceptual parallel reduction for row maximum, illustrates the pattern
 __shared__ float smem[BLOCK_SIZE];
 smem[threadIdx.x] = input[threadIdx.x];
 __syncthreads();
@@ -144,7 +144,7 @@ The attention computation requires two GEMM operations: $S = QK^T$ (scores) and 
 - $QK^T$: multiply Q (normal row-major) by $K^T$ (transposed), so the **GEMM_NT** kernel
 - $SV$: multiply S (normal) by V (normal), so the **GEMM_NN** kernel
 
-Both use the tiled GEMM pattern from Project 1: divide the output matrix into tiles, cooperatively load tiles of the input matrices into shared memory, compute partial dot products, accumulate, advance to the next tile.
+Both use the tiled GEMM pattern from Project 1 (see [The Tiling Solution](/ideas/2025/gpu-p1p2/#the-tiling-solution)). The attention-specific twist is handling both GEMM_NN and GEMM_NT layouts while keeping shared-memory accesses efficient.
 
 <Figure
   src={managingGlobalMemImg}
@@ -153,13 +153,13 @@ Both use the tiled GEMM pattern from Project 1: divide the output matrix into ti
   width={640}
 />
 
-For the $QK^T$ case, the transposed layout means the tile loading is different — you're loading rows of $K$ as if they were columns. Getting this indexing right without introducing bank conflicts is the fiddly part of GEMM_NT.
+For the $QK^T$ case, the transposed layout means tile loading is different, because you're loading rows of $K$ as if they were columns. Getting this indexing right without introducing bank conflicts is the fiddly part of GEMM_NT.
 
 ### Why Not Just Use cuBLAS?
 
 A reasonable question: cuBLAS has extremely optimized GEMM routines. Why write your own?
 
-Two reasons. First, understanding: implementing tiled GEMM forces you to internalize the shared memory tiling pattern at a level that reading about it doesn't. Second, fusion: FlashAttention's key insight is that the GEMMs, mask, softmax, and output GEMM need to be *fused into a single kernel* to avoid materializing the N×N intermediate matrix. You can't fuse cuBLAS calls — they're black boxes. You need control over the kernel internals.
+Two reasons. First, understanding: implementing tiled GEMM forces you to internalize the shared memory tiling pattern at a level that reading about it doesn't. Second, fusion: FlashAttention works because the GEMMs, mask, softmax, and output GEMM are *fused into a single kernel* to avoid materializing the N×N intermediate matrix. You can't fuse cuBLAS calls, since they're black boxes. You need control over the kernel internals.
 
 ## FlashAttention: Tiling Attention Itself
 
@@ -167,32 +167,32 @@ Two reasons. First, understanding: implementing tiled GEMM forces you to interna
 
 The naive attention implementation's memory problem:
 
-1. Compute $S = QK^T/\sqrt{d}$ — writes a [batch, heads, N, N] tensor to global memory
-2. Apply causal mask — reads and writes the full [batch, heads, N, N] tensor
-3. Compute softmax — reads and writes the full [batch, heads, N, N] tensor
-4. Compute $O = \text{softmax}(S) \cdot V$ — reads the full [batch, heads, N, N] tensor
+1. Compute $S = QK^T/\sqrt{d}$, which writes a [batch, heads, N, N] tensor to global memory
+2. Apply causal mask, which reads and writes the full [batch, heads, N, N] tensor
+3. Compute softmax, which reads and writes the full [batch, heads, N, N] tensor
+4. Compute $O = \text{softmax}(S) \cdot V$, which reads the full [batch, heads, N, N] tensor
 
-Steps 1-4 each touch O(N²) data in global memory. For N=4096, that's four passes over 32 MB (per head, per batch element). The arithmetic intensity is terrible — you're doing minimal computation per byte loaded.
+Steps 1-4 each touch O(N²) data in global memory. For N=4096, that's four passes over 32 MB (per head, per batch element). The arithmetic intensity is terrible, because you're doing minimal computation per byte loaded.
 
 Can we do all four steps with a single pass over the data, keeping the intermediate results in fast on-chip shared memory instead of writing them to global memory?
 
 ### Online Softmax and FlashAttention
 
-The key mathematical insight: softmax can be computed **incrementally** as you see new values, without knowing the final maximum or sum in advance.
+A useful mathematical insight is that softmax can be computed **incrementally** as you see new values, without knowing the final maximum or sum in advance.
 
-If you've already computed a partial softmax for the first *j* elements, and you see a new element $x_{j+1}$, you can update the running maximum and running sum to incorporate the new value — and *correct* the partial output accordingly. This is the "online softmax" algorithm.
+If you've already computed a partial softmax for the first *j* elements, and you see a new element $x_{j+1}$, you can update the running maximum and running sum to incorporate the new value, then *correct* the partial output accordingly. This is the "online softmax" algorithm.
 
 FlashAttention applies this idea at tile granularity:
 
-1. Divide Q into blocks of $B_r$ rows; divide K and V into blocks of $B_c$ rows
+1. Divide Q into blocks of $B_r$ rows, and divide K and V into blocks of $B_c$ rows
 2. For each block of Q: iterate over all blocks of K and V
 3. For each (Q-block, K-block) pair: load into shared memory, compute partial attention scores, apply online softmax update
 4. Accumulate into the output block
 
-The critical result: at no point is the full N×N score matrix ever written to global memory. The only data that touches global memory is Q, K, V (read once each) and O (written once). Memory complexity drops from O(N²) to O(N).
+Practically, at no point is the full N×N score matrix written to global memory. In practice, tiled kernels still reload K/V blocks across Q tiles, so this is not literally "read once each." The paper-level win is that HBM traffic scales with tiled streaming plus final output, instead of repeated full-score-matrix read/write passes. Memory complexity drops from O(N²) intermediates to O(N) auxiliary state.
 
 ```python
-# Conceptual FlashAttention-2 forward — illustrates the algorithm,
+# Conceptual FlashAttention-2 forward, illustrates the algorithm,
 # not the project-specific implementation. Based on Algorithm 1 of Dao (2023).
 def flash_attention_forward(Q, K, V, causal=False):
     B, H, N, d = Q.shape
@@ -250,7 +250,9 @@ The performance story is compelling. Against `torch.nn.MultiheadAttention` (PyTo
 | batch=4, seq=128, causal | ~1.8× |
 | batch=64, seq=4096, causal | ~2.0× |
 
-The speedup grows dramatically with sequence length — exactly as expected from the O(N²) → O(N) memory reduction. At seq=4096, the naive implementation is thrashing the global memory bus; FlashAttention avoids it.
+Measurement context for this table: course project harness on an NVIDIA H100, FP16 attention path with FP32 softmax accumulation, wall-clock timings from the provided benchmarking script, and no full multi-run confidence-interval study (so treat values as directional). This is enough to compare kernel variants in-project, but not a publication-grade benchmark suite.
+
+The speedup grows with sequence length, consistent with reduced HBM traffic and better tiling efficiency at long contexts. At seq=4096, the naive implementation spends substantially more time moving intermediate score tensors, while FlashAttention avoids materializing that N×N buffer.
 
 ## Inference Optimization: Prefill vs. Decode
 
@@ -258,9 +260,9 @@ The speedup grows dramatically with sequence length — exactly as expected from
 
 Running a language model in production has two very different computational phases:
 
-**Prefill**: Process the entire input prompt at once to produce the first output token. The full N-token sequence runs through all layers. This is a GEMM-heavy operation — all of FlashAttention applies here.
+**Prefill**: Process the entire input prompt at once to produce the first output token. The full N-token sequence runs through all layers. This is a GEMM-heavy operation, so all of FlashAttention applies here.
 
-**Decode**: Generate subsequent tokens one at a time. Each new token attends to all previous tokens, but *it's just one query* attending to N keys and values. The attention score computation degenerates from a matrix-matrix multiply to a **matrix-vector multiply** (GEMV). The character of the computation changes completely.
+**Decode**: Generate subsequent tokens one at a time. Each new token attends to all previous tokens, but *it's just one query* attending to N keys and values. The attention score computation degenerates from a matrix-matrix multiply to a **matrix-vector multiply** (GEMV). Algorithmically this is O(N) per token for attention against the cache, and implementation details (cache layout, bandwidth, launch overhead) dominate throughput.
 
 ### Precision, Bandwidth, and Arithmetic Intensity
 
@@ -276,20 +278,21 @@ The critical optimization for decode is the **KV Cache**: pre-compute and store 
 2. Append the new K and V vectors to the KV cache
 3. Run attention with the new query against *all* K and V values in the cache (growing with each step)
 
-Without the KV cache, each decode step would need to re-process the entire sequence from scratch — O(N) work per token, O(N²) total for generating a full response. With the KV cache, each step is O(N) work but you avoid recomputing K and V for all previous tokens.
+Without the KV cache, each decode step would need to re-process the entire sequence from scratch: O(N) work per token and O(N²) total for generating a full response. With the KV cache, each step is O(N) work but you avoid recomputing K and V for all previous tokens.
 
-The KV cache has a memory cost: for GPT-2 (12 layers, 12 heads, head_dim=64), generating 100 tokens on top of a 1024-token prompt requires storing 12 × 2 × 1124 × 64 = ~1.7 million fp16 values per batch element. For large models at scale (GPT-4 class, long contexts, large batches), KV cache memory often becomes the binding constraint on batch size.
+The KV cache has a memory cost: for GPT-2 (12 layers, 12 heads, head_dim=64), generating 100 tokens on top of a 1024-token prompt requires storing
+`layers × heads × K/V × seq × head_dim = 12 × 12 × 2 × 1124 × 64 = 20,717,568` values per batch element. At FP16, that's about 41.4 MB per batch element (or ~82.9 MB at FP32), ignoring allocator/paging overhead. For large models at scale (GPT-4 class, long contexts, large batches), KV cache memory often becomes the binding constraint on batch size.
 
-> The state-of-the-art solution to KV cache memory fragmentation is [PagedAttention](https://arxiv.org/abs/2309.06180) — treating the KV cache like virtual memory with pages, rather than pre-allocating contiguous blocks. But that's beyond the scope of this project.
+> The state-of-the-art solution to KV cache memory fragmentation is [PagedAttention](https://arxiv.org/abs/2309.06180), which treats the KV cache like virtual memory with pages rather than pre-allocating contiguous blocks. But that's beyond the scope of this project.
 
 ### The Decode Kernel
 
-The FlashAttention CUDA kernel needs modification for the decode phase. When Q has sequence length 1 (one query), the outer loop over Q-blocks collapses to a single iteration — you process the one query against all K/V blocks.
+The FlashAttention CUDA kernel needs modification for the decode phase. When Q has sequence length 1 (one query), the outer loop over Q-blocks collapses to a single iteration, and you process the one query against all K/V blocks.
 
 ```cpp
 // Decode kernel: Q has seq_len = 1, so the outer B_r loop disappears.
 // Just iterate over K/V blocks and accumulate the output.
-// (Conceptual — not project-specific code)
+// (Conceptual, not project-specific code)
 for (int kv_block = 0; kv_block < N; kv_block += B_c) {
     // Load K and V tiles into shared memory
     // Compute Q @ K^T for this block (a dot product, not a GEMM)
@@ -298,7 +301,7 @@ for (int kv_block = 0; kv_block < N; kv_block += B_c) {
 }
 ```
 
-The decode kernel produces exactly the same result as running the full attention with seq_len=1 in the prefill kernel — but with the outer loop specialized away. This both reduces computation and potentially enables better register/shared memory utilization.
+The decode kernel produces exactly the same result as running the full attention with seq_len=1 in the prefill kernel, but with the outer loop specialized away. This both reduces computation and potentially enables better register/shared memory utilization.
 
 Performance vs. naive PyTorch:
 - **TTFT** (time to first token, prefill): ~3.5× speedup
@@ -311,7 +314,7 @@ Task 7 connects the custom attention kernels to a real GPT-2 model loaded from H
 1. **Prefill**: Run the input prompt through all 12 GPT-2 layers using the FlashAttention kernel. Store K and V for all layers in the KV cache.
 2. **Decode**: For each new token: run one forward pass through all layers using the decode kernel, appending new K/V to the cache. Sample from the output distribution. Repeat.
 
-If the attention kernels are numerically correct, GPT-2 should generate coherent text — similar quality to the reference PyTorch implementation. If there are bugs (wrong softmax normalization, off-by-one in tiling, etc.), the model generates garbage. The end-to-end test is a stringent correctness check: any systematic numerical error accumulates across 12 layers and 100 decode steps.
+If the attention kernels are numerically correct, GPT-2 should generate coherent text similar in quality to the reference PyTorch implementation. If there are bugs (wrong softmax normalization, off-by-one in tiling, etc.), the model generates garbage. The end-to-end test is a stringent correctness check: any systematic numerical error accumulates across 12 layers and 100 decode steps.
 
 A generated sample on an attention-related prompt produced something like:
 
@@ -319,7 +322,7 @@ A generated sample on an attention-related prompt produced something like:
 >
 > *For a long time, we didn't see any advantage in using flashattention kernels, but it's hard not to find that we've become much better..."*
 
-It's GPT-2 (2019), not GPT-4. The factual content is questionable. But the syntax is coherent and the model is clearly doing language modeling — which means the kernels are correct.
+It's GPT-2 (2019), not GPT-4. The factual content is questionable. But the syntax is coherent and the model is clearly doing language modeling, which means the kernels are correct.
 
 ## Design Questions This Raised
 
@@ -327,21 +330,21 @@ Working through the project, the questions that stayed open were architectural r
 
 - **What's the right tile size?** The project required tuning $B_r$ and $B_c$ empirically. The optimal values depend on the GPU's shared memory budget, the head dimension, and the warp occupancy. Is there a principled way to derive them, or is it always measured?
 
-- **When does causal masking change the tradeoff?** With a causal mask, roughly half the K/V blocks per Q-block are "above the diagonal" and produce all-zero attention weights. FlashAttention can skip these blocks entirely — the causal version can be faster than the non-causal version for large sequences. How should the kernel detect and exploit this?
+- **When does causal masking change the tradeoff?** With a causal mask, roughly half the K/V blocks per Q-block are "above the diagonal" and produce all-zero attention weights. FlashAttention can skip these blocks entirely, so the causal version can be faster than the non-causal version for large sequences. How should the kernel detect and exploit this?
 
 - **How does FlashAttention interact with quantization?** Modern LLM inference uses FP8 or INT8 weights and activations. The online softmax in FlashAttention requires fp32 accumulators for the running max and sum. Does the tiling approach compose cleanly with quantized arithmetic, or does it require special handling at tile boundaries?
 
-- **How do multi-query attention (MQA) and grouped-query attention (GQA) change things?** GPT-2 uses full MHA where each head has its own K and V. Modern models (LLaMA, Mistral) use GQA where K and V are shared across groups of Q heads. The KV cache shrinks dramatically — but the attention kernel needs to handle the asymmetric head counts.
+- **How do multi-query attention (MQA) and grouped-query attention (GQA) change things?** GPT-2 uses full MHA where each head has its own K and V. Modern models (LLaMA, Mistral) use GQA where K and V are shared across groups of Q heads. The KV cache shrinks dramatically, but the attention kernel needs to handle the asymmetric head counts.
 
 ## Conclusion: The Course in One Kernel
 
-If I had to pick one project that ties together everything from the course, it's this one.
+FlashAttention is where the course concepts finally converge in one kernel design.
 
 Implementing FlashAttention requires understanding the memory hierarchy (shared memory for tiles, global memory for Q/K/V/O), the execution model (warps, blocks, register pressure), the computational arithmetic (numerically stable softmax, online updates, fused kernels), and the ML context (why attention is the bottleneck, prefill vs. decode, KV cache).
 
-It also demonstrates something broader about GPU programming: the wins come from rethinking the algorithm to match the hardware constraints, not from micro-optimizing a fixed algorithm. The naive attention implementation does the right math. FlashAttention does the same math in a different order — an order that respects the memory hierarchy. That's the whole trick.
+It also demonstrates something broader about GPU programming: the wins come from rethinking the algorithm to match the hardware constraints, not from micro-optimizing a fixed algorithm. The naive attention implementation does the right math. FlashAttention does the same math in a different order, one that respects the memory hierarchy. That's the whole trick.
 
-The 7.7× speedup at seq=4096 isn't free. It's the payoff for understanding that "memory bandwidth is the bottleneck" means something concrete, and that the path from O(N²) to O(N) memory is paved with tile boundary handling, online softmax updates, and careful shared memory layout. Writing the kernel teaches you why the speedup is possible in a way that reading the FlashAttention paper doesn't.
+The 7.7× speedup at seq=4096 isn't free. It's the payoff for reducing expensive intermediate-memory traffic and matching the algorithm to GPU memory hierarchy constraints. The gains come from tile boundary handling, online softmax updates, and careful shared memory layout. Writing the kernel teaches you why that speedup is possible in a way that reading the FlashAttention paper doesn't.
 
 ## Additional Resources
 
@@ -351,7 +354,7 @@ The 7.7× speedup at seq=4096 isn't free. It's the payoff for understanding that
   url="https://arxiv.org/abs/2205.14135"
 >
   <p>
-    The original FlashAttention paper (NeurIPS 2022). Section 3 derives the online softmax algorithm and the tiling scheme from first principles. Reading this before implementing is essential — it explains *why* the algorithm works, not just the mechanics.
+    The original FlashAttention paper (NeurIPS 2022). Section 3 derives the online softmax algorithm and the tiling scheme from first principles. Reading this before implementing is essential, because it explains *why* the algorithm works, not just the mechanics.
   </p>
 </BookCard>
 
